--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
       }
   ],
   "require": {
-    "php": "^5.4 || ^7.0 || ^8.0",
+    "php": "^7.0",
     "illuminate/support": "^8.0",
     "illuminate/database": "^8.24.0",
     "illuminate/pagination": "^8.0"
   },
   "require-dev": {
     "mockery/mockery": "^1.4.2",
-    "phpunit/phpunit": "^4.0 || ^5.0 || ^6.0 || ^7.0 || ^8.0 || ^9.0"
+    "phpunit/phpunit": "^9.0"
   },
   "autoload": {
     "psr-4": {
