--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
       ]
     },
     "branch-alias": {
-      "dev-master": "1.0"
+      "dev-master": "1.0-dev"
     }
   },
   "minimum-stability": "dev"
