--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,15 @@
   },
   "autoload": {
     "psr-4": {
-      "OsarDB\\": "src/OsarDB/"
+      "Microestc\\": "src/Microestc"
     }
   },
   "extra": {
+    "laravel": {
+      "providers": [
+          "Microestc\\OscarDB\\OscarDBServiceProvider"
+      ]
+    },
     "branch-alias": {
       "dev-master": "1.0-dev"
     }
