--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
   ],
   "type": "library",
   "require": {
-    "php": "^7.0",
-    "illuminate/support": "^8.0",
-    "illuminate/database": "^8.24.0",
-    "illuminate/pagination": "^8.0"
+    "php": "^7.0 || ^8.0",
+    "illuminate/support": "^8.0 || ^9.0",
+    "illuminate/database": "^8.24.0 || ^9.0",
+    "illuminate/pagination": "^8.0 || ^9.0"
   },
   "require-dev": {
     "mockery/mockery": "^1.4.2",
@@ -32,8 +32,8 @@
       ]
     },
     "branch-alias": {
-      "dev-master": "1.1-dev"
+      "dev-master": "1.2"
     }
   },
-  "minimum-stability": "dev"
+  "minimum-stability": "stable"
 }
