--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
       ]
     },
     "branch-alias": {
-      "dev-master": "1.2"
+      "dev-master": "1.2-dev"
     }
   },
   "minimum-stability": "stable"
